--- a/index.html
+++ b/index.html
@@ -52,5 +52,38 @@
 			<br>
 			<a class="article" href="https://home.cern/science/computing/birth-web" target="_blank">The birth of the Web</a>
 		</section>
+		<section id="apps">
+			<h1>apps</h1>
+			<div class="line"></div>
+			<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/60sQ1tlgL1mQp_yUWHKhXiezAsz1cAK9y8ueKfxPqsE/embed"></iframe>
+			<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/AfWVb1Y1pAqmZHiZRCOw8zOrT13QUgNYGWyehZWOJS4/embed"></iframe>
+			<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/dQ9wcfcRL46lXujPYMP_WsueIvC7KK2Z9NFC-Lqy7zE/embed"></iframe>
+		</section>
+		<section id="games">
+			<h1>games</h1>
+			<div class="line"></div>
+			<a href="https://studio.code.org/projects/spritelab/VDV8RG9LOCJqqTBxw6_jIpNBfd2K4VpNpggMjGLXZPM" target="_blank"><img src="thumbnail.png"></a>
+			
+			<a href="https://studio.code.org/projects/spritelab/E3Ax4NZQAFrkqY4nNJXgcWndMUvTsgZ7QIyVenStc-Y" target="_blank"><img src="thumbnail%20(1).png"></a>
+			
+		</section >
+		<section id="chatbot">
+			<h1>chat bot</h1>
+			<div class="line"></div>
+			<iframe
+    allow="microphone;"
+    width="350"
+    height="430"
+    src="https://console.dialogflow.com/api-client/demo/embedded/332a6b5e-91ed-4d65-9676-1eafafc97d7a">
+</iframe>
+      
+<iframe
+    allow="microphone;"
+    width="350"
+    height="430"
+    src="https://console.dialogflow.com/api-client/demo/embedded/26ae7d81-e9a5-4ce9-8426-75af7e999ed5">
+</iframe>
+      
+		</section>
     </body>
 </html>
